--- a/Java/J2EE/creazy/笔记.md
+++ b/Java/J2EE/creazy/笔记.md
@@ -42,3 +42,26 @@ PrePassivate
 
 # 7 模块 #
 
+# 10 JPA #
+配置 persistence.xml
+```
+<persistence-unit name="primary" transaction-type="JTA">
+...
+```
+
+```
+@Singleton
+public class UserEaoImpl implements UserEao {
+	@PersistenceUnit(name = "primary")
+	EntityManagerFactory emf;
+
+	@Override
+	public User find(Integer id) {
+		EntityManager em = emf.createEntityManager();
+		User user = em.find(User.class, id);
+		em.close();
+		return user;
+	}
+}
+```
+
