--- a/Java/J2EE/JPA/笔记.md
+++ b/Java/J2EE/JPA/笔记.md
@@ -57,3 +57,211 @@ public static void main(String[] args) {
 }
 ```
 
+Embeddable
+EmbeddId
+AttributeOverride(s)
+
+ElementCollection
+
+OneToMany + MapKey 用于Map类型
+OrderBy 用于Set 或 List
+
+继承:
+1. 全部都在一张表
+	1. 在父类 指定 Inheritance(全在一张表, 表名会以父类的表名为准) DiscriminatorColumn(字符串或整数的识别符)
+	2. 在子类需要指定形如 : @DiscriminatorValue("teacher")
+	3. 父类可以是抽象(加一个abstract)的, 也可以不是抽象的
+		1. 如果不是抽象的, 那么父类也可以有 @DiscriminatorValue 配置
+		2. 不管抽象还是啥, 查询的时候都可以使用父类的class
+			1. 最后的真正返回类型是实际的子类
+2. 每个类一张表
+	1. 每个类会被扁平化成一个表
+	2. 采用这种方式的话没办法使用自增主键 切记切记
+	3. 组要使用table来做主键 或 其他方式
+3. 采用join的方式
+	1. 另外一种父类叫做 非实体父类, 即父类没有 @Entity
+		1. 根父类需要使用 @MappedSuperclass 标记
+		2. 不会生成父类所对应的表
+		3. 父类的第一层孩子会被扁平化(此时效果相当于是每个类一张表)
+		4. 不过非第一层的孩纸的每个表还是只有它自己的字段的
+	2. 非实体父类的特征:
+		1. 数据库中没有对应的表
+		2. 不能使用em对父类进行各种操作, 它也不能被用于Query中
+其他相关annotation
+AssociationOverride
+
+实体的生命周期监听器
+使用如下的annotation在实体类上
+Pre/Post + Persist Remove Update
+PostLoad
+
+
+这种方式一般是不推荐的额
+
+可以用 @EntityListeners 显示的给你的Entity类 加上这个annotation, 可以指定它对应的监听器的类
+监听器类不需要实现接口
+它只需要使用上面的Pre/Post annotation 去标记它的接口就行了
+使用 @ExcludeDefaultListeners 可以排除一些默认的监听器
+
+
+使用
+select user from User as user where user.name = :1
+...setParameter(1,"xzc")
+或
+select user from User as user where user.name = :name
+...setParameter("name","xzc")
+
+其他的跟hibernate类似
+
+如果是查询部分属性的话, 那么每一条记录是以 Obejct[] 形式保存的
+
+很多数据库有的它都有
+avg count max min sum
+group by, having
+distinct, is null, is not null, in, not in, like, and, or, not, between, is empty, is not empty, member of, not member of
+order by
+limit 一般是用query的setMaxResults来做到的
+数学 逻辑运算符
+
+字符串 数学 日期/时间 
+由于我们底层的实现通常是 hibernate, 因此可以参考hibernate的官方文档
+
+查询的时候支持多态
+select p.name from Person as p 这样会把 person 及其子类都查找出来
+from java.lang.Object 你懂的
+
+关联和连接一般是用 点操作符 处理的.
+因为点操作符的存在, 连接一般会比较少用
+
+一种场景是用于简化你的输入, 比如
+
+select p.name, a.detail from Person as p left outer join p.address as a
+它跟下面是等价的:
+select p.name, p.address.detail from Person as p
+
+p.address.detail 被简化成a.detail 当你多个地方用到a的时候就有点用处了
+
+xxxToOne 一般是 EAGER的
+ToMany 一般是LAZY的
+
+子查询
+select cat from Cat as cat
+where not (cat.name, cat.color) in (
+	select badCat.name, badCat from BadCat as badCat
+)
+in exists any all some
+any, all, some可以与 比较运算符结合使用
+where salary > any( select ...)
+
+
+命名查询需要放在实体类上
+我怎么不是很推荐呢?
+
+批量操作
+各种批量操作对托管的实体不会产生影响
+比如你 update User as user set user.name = '123' where user.age = ...
+你的托管的User不会体现出来
+
+1. 执行形如 em.createQuery("update Person p set p.name=?1 where p.age=?2").setParameter(...).executeUpdate()
+
+@SqlResultSetMapping(s)
+
+存储过程
+
+@Basic
+基本上可以省略, 一般情况下是个属性就默认有basic, 它可以指定 fetch是eager还是lazy(对于这些类型默认是EAGER), 是否可选
+只有一些基本数据类型和常见类型可以是Basic, 时间 字节字符数组, 枚举类型 之类
+
+@Column
+显式定义对应的列的一些信息
+名字 空 长度 精度 是否可更新 是否可插入
+
+@Enumerated 用于枚举类型, 可以选择是保存字符串还是数值
+
+@Lob
+
+@Temporal 用于指定 Date 类型 具体对应了哪种数据库类型 date, time, 还是时间戳
+
+
+hibernate特有
+@Formula 可以构造出一个虚拟字段, 这个字段的值是用数据库里的值计算出来的
+比如
+@Formula("price * quantity")
+private double totalPrice;
+
+Embeddable
+Embedded
+EmbeddedId
+AttributeOverrides
+
+1. 需要有@Entity 或 在XML里描述
+2. 公共无参构造器
+3. 需要是一个 top-level 类 (不是内部类)
+4. 枚举类型和接口不能是@Entity
+5. 不能是final, 类和方法
+6. If an entity instance is to be used remotely as a detached object, the entity class must implement the Serializable interface.
+7. 实体类可以有父类, 父类可以是实体类也可以不是实体类
+8. 通过get/set访问属性
+9. 实现 equals hashCode
+
+hibernate确保在同一次session中
+你获得对象都是同一个, 可以用 == 比较的!
+
+将某些实体保存在Set的时候要注意, 这些实体被保存之前它的id为null或0
+当这些实体被persist之后, 他们才有的id
+可这时候已经来不及了, set当初是根据旧的id来保存你的对象的
+
+@Version
+乐观锁
+
+@Transient
+
+
+可以控制List的顺序, 当你有需要的时候, 否则List的话会和Set类似 (顺序不保证)
+@ElementCollection
+@CollectionTable(
+    name="patch_change",
+    joinColumns=@JoinColumn(name="patch_id")
+)
+@OrderColumn(name = "index_id")
+private List<Change> changes = new ArrayList<>();
+
+
+使用table的方式生成主键
+@Id
+@GeneratedValue(strategy = GenerationType.TABLE, generator = "gtabletest")
+@TableGenerator(name = "gtabletest", table = "table_id_counter", pkColumnName = "counter", valueColumnName = "value")
+private Integer id;
+注意:
+默认情况下, hibernate的实现会一次性将数据库的字段值加上50 或 加上100 等其他值
+比如我开了一个em, 然后加了2条记录, 它的id是1和2, 关了这个em
+又开了一个em, 然后加了2条记录, 那么id可能就是51,52了
+意思就是说对于一次em, 它直接就预取了一些id, 但这些id只能由这次em使用
+
+
+
+
+@Id
+@GeneratedValue( generator = "uuid" )
+@GenericGenerator(
+    name = "uuid",
+    strategy = "org.hibernate.id.UUIDGenerator",
+    parameters = {
+        @Parameter(
+            name = "uuid_gen_strategy_class",
+            value = "org.hibernate.id.uuid.CustomVersionOneStrategy"
+        )
+    }
+)
+uuid生成器, 这需要 hibernate 的支持
+@PrimaryKeyJoinColumn
+@JoinColumn
+
+
+
+    @OneToMany(cascade = CascadeType.ALL)
+    @SortComparator(ReverseComparator.class)
+    private SortedSet<Phone> phones = new TreeSet<>();
+
+
+Natural Ids 指的是具有实际意义的主键
