--- a/Java/J2EE/Spring/SpringMVC/21.MVC.md
+++ b/Java/J2EE/Spring/SpringMVC/21.MVC.md
@@ -598,3 +598,28 @@ ContentNegotiatingViewResolver 可以用于根据请求的不同 最终呈现的
 http://localhost:8080/nc/r1.json
 http://localhost:8080/nc/r1.xml
 就会返回不同的结果
+
+
+# 异步支持 #
+Callable 这个线程会被spring管理(TaskExecutor), 可以抛出任何异常, 抛出的异常会被SpringMVC的异常机制处理
+DefferedResult / dr 会返回一个Deffered Object, 一般真正的操作在你自己的线程, 当你处理完之后, 调用dr.setResult 就表示你已经处理完成了
+
+AsyncHandlerInterceptor 
+
+
+Callable 和 DefferedResult可以用于实现服务端的长轮询
+
+## HTTP Stream ##
+ResponseBodyEmitter
+
+## Server-Sent Events ##
+
+
+StreamingResponseBody
+
+21.7有UriBuilder
+
+21.16
+FormattingConversionServiceFactoryBean
+
+
