完善Jersey笔记和demo

--- a/Java/J2EE/Jersey/开始.md
+++ b/Java/J2EE/Jersey/开始.md
@@ -2,14 +2,35 @@ https://jersey.java.net/documentation/latest/getting-started.html
 
 # 1 #
 maven骨架
+bom文件
+http://central.maven.org/maven2/org/glassfish/jersey/jersey-bom/2.22.2/jersey-bom-2.22.2.pom
+
+.post(Entity.entity(new TestBean("a", 1, 1L), MediaType.APPLICATION_JSON_TYPE), TestBean.class);
+
+
+# 2 几个概念 #
+https://jersey.java.net/documentation/latest/modules-and-dependencies.html
+
+1. Container
+	1. 除了可以运行在基于Servlet的容器上, 还可以作为普通的JavaSE程序单独运行, 或是在Servlet环境下编程式运行
+	2. 这就需要Container的支持
+2. Connector
+	1. 客户端访问服务端时的底层http通信的实现, 比如基于HttpURLConnection和 Apache HttpClient
+
 
 # 3 #
 Path
 GET POST PUT DELETE HEAD
-Produces
-Consumes
-QueryParam DefaultValue PathParam
+@Produces
+@Consumes
+@QueryParam DefaultValue PathParam
 @MatrixParam, @HeaderParam, @CookieParam, @FormParam
+@Encoded
+@BeanParam
+@Context
+默认资源所属的类是 每次请求创建一个, 可以使用 @Singleton 标记使得它成为一个单例
+
+
 
 In general the Java type of the method parameter may:
 
@@ -81,13 +102,19 @@ Resource
 Request request;
 
 When deploying a JAX-RS application using servlet then ServletConfig, ServletContext, HttpServletRequest and HttpServletResponse are available using @Context.
+当使用基于Servlet的容器来部署的时候, 这些Servlet相关的参数也可以通过@Context被注入进来
+
 
 # 4 #
 ResourceConfig 继承了 Application 并且提供了更多的配置
-
+不过这个类是jersey特有的, 它支持包扫描
 
 当要启动一些特性的时候, 需要将相应的jar包放早classpath下, 并且需要显式注册他们.
-但下面这些包不用显式注册, 只需要放就行
+比如为了支持接收和响应json数据, 你需要启动json特性
+
+但下面这些包不用显式注册, 只需要放jar包就行, 不用显式注册, 这称为"自动发现", 当然也可以关闭自动发现机制.
+https://jersey.java.net/documentation/latest/deployment.html
+
 JSON binding feature from jersey-media-moxy
 jersey-media-json-processing
 jersey-bean-validation
@@ -101,8 +128,54 @@ UriConnegFilter - a URI-based content negotiation filter.
 	resourceConfig.register(org.glassfish.jersey.grizzly2.httpserver.GrizzlyHttpContainerProvider.class);
 	resourceConfig.property(ServerProperties.METAINF_SERVICES_LOOKUP_DISABLE, true);
 
-当部署到容器的时候, 可以选择 Servlet 或 Filter 方式
+WadlFeature 可以用于自动生成WADL文件
 
+Jersey uses a common Java Service Provider mechanism to obtain all service implementations.
+META-INF/services/
+你可以关闭这一个行为, 来节省启动时间, 但是你需要像上面那样手动注册所有的特性
+resourceConfig.property(ServerProperties.METAINF_SERVICES_LOOKUP_DISABLE, true); 关闭自动发现服务
+
+## Java SE 部署环境 ##
+### HTTP servers ###
+1. 基于JDK的
+```
+<dependency>
+    <groupId>org.glassfish.jersey.containers</groupId>
+    <artifactId>jersey-container-jdk-http</artifactId>
+    <version>2.22.2</version>
+</dependency>
+URI baseUri = UriBuilder.fromUri("http://localhost/").port(9998).build();
+ResourceConfig config = new ResourceConfig(MyResource.class);
+HttpServer server = JdkHttpServerFactory.createHttpServer(baseUri, config);
+```
+
+2. Grizzly HTTP Server
+``` 
+    <artifactId>jersey-container-grizzly2-http</artifactId>
+```
+
+3. Simple server
+```
+    <artifactId>jersey-container-simple-http</artifactId>
+```
+
+4. Jetty HTTP Server
+
+## 运行时创建端点 ##
+```
+HttpHandler endpoint = RuntimeDelegate.getInstance()
+        .createEndpoint(new MyApplication(), HttpHandler.class);
+```
+
+当部署到容器的时候, 可以选择 Servlet 或 Filter 方式
+```
+将
+<dependency>
+	<groupId>org.glassfish.jersey.containers</groupId>
+	<artifactId>jersey-container-servlet</artifactId>
+</dependency>
+加入就行, 看它的META-INF/services/就知道
+```
 Servlet 3.0 后
 ```
 @ApplicationPath("resources")
@@ -251,46 +324,25 @@ public static class MyRequestFilter implements ClientRequestFilter {
 }
 ```
 
-安全
-SslConfigurator sslConfig = SslConfigurator.newInstance()
-        .trustStoreFile("./truststore_client")
-        .trustStorePassword("secret-password-for-truststore")
-        .keyStoreFile("./keystore_client")
-        .keyPassword("secret-password-for-keystore");
- 
-SSLContext sslContext = sslConfig.createSSLContext();
-Client client = ClientBuilder.newBuilder().sslContext(sslContext).build();
+安全 和 认证 有需要再去看
 
-认证
+# 6 异步支持 #
+java自带的简单异步支持
 ```
-HttpAuthenticationFeature feature = HttpAuthenticationFeature.basic("user", "superSecretPassword");
-
-HttpAuthenticationFeature feature = HttpAuthenticationFeature.basicBuilder()
-    .nonPreemptive().credentials("user", "superSecretPassword").build();
-
-HttpAuthenticationFeature feature = HttpAuthenticationFeature.basicBuilder().build();
-
-Response response = client.target("http://localhost:8080/rest/homer/contact").request()
-    .property(HTTP_AUTHENTICATION_BASIC_USERNAME, "homer")
-    .property(HTTP_AUTHENTICATION_BASIC_PASSWORD, "p1swd745").get();
+Future<User> f = t.path("/1").request().async().get(User.class);
+user = f.get();
+System.out.println(user);
 ```
-
-# 6 #
+除了future外, 还支持回调
+		
+支持 RxJava 整合
 ```
-List<Destination> recommended = Collections.emptyList();
-try {
-    recommended = destination.path("recommended").request()
-            // Identify the user.
-            .header("Rx-User", "Sync")
-            // Return a list of destinations.
-            .get(new GenericType<List<Destination>>() {});
+RxObservable.from(t.path("/1")).request().rx().get(User.class).toBlocking().forEach(new Action1<User>() {
+	public void call(User user) {
+		System.out.println(user);
+	}
+});
 ```
-
-
-CountDownLatch
-
-RxClient<RxObservableInvoker> rxClient = Rx.from(client, RxObservableInvoker.class);
-RxClient<RxObservableInvoker> rxClient = RxObservable.from(client);
 
 # 7 #
 return Response.ok(f, mt).build();
@@ -329,7 +381,28 @@ return Response.ok(f, mt).build();
 https://jersey.java.net/documentation/latest/representations.html
 这里有一个教程可以返回304
 
-# 9 json #
+# 8 #
+EntityProviders
+
+@XmlRootElement
+@XmlEelement
+@XmlAttribute
+
+# 9 常见的类型 #
+
+## annotations ##
+@XmlRootElement
+@XmlElement
+@XmlAttribute
+@XmlTransient
+//可以设置属性的前缀 比如 xzc_
+//这样所有 XmlAttribute 都会加上前缀
+//但是Element不会加前缀
+MoxyJsonConfig mjc = new MoxyJsonConfig();
+mjc.setAttributePrefix("abc");
+cc.register(mjc.resolver());
+
+## json ##
 1. MOXy - JSON binding support via MOXy is a default and preferred way of supporting JSON binding in your Jersey applications since Jersey 2.0. When JSON MOXy module is on the class-path, Jersey will automatically discover the module and seamlessly enable JSON binding support via MOXy in your applications. (See Section 4.3, “Auto-Discoverable Features”.)
 2. Java API for JSON Processing (JSON-P)
 3. Jackson
@@ -392,8 +465,42 @@ public Document getDocument(Document document) {
 }
 ```
 
+## jsonp ##
+```
+@GET
+@Path("/jsonp/{id:\\d}")
+@JSONP(callback = "callback")
+@Produces("application/javascript")
+public Response getJSONP(@PathParam("id") int id) {
+	User user = mUserMap.get(id);
+	return user == null ? Response.status(Response.Status.NOT_FOUND).build() : Response.ok(user).build();
+}
+```
+
+@JSONP(queryParam = "callback")
+queryParam("callback", "abc")
+
+FileDataBodyPart 
+FormDataMultiPart
+MultiPart
+@FormDataParam
+
+
 
 # 10 过滤器/拦截器 #
+服务端和客户端都有相应的 request/response filter
+
+1. 管理http头
+2. cookie
+3. 属性
+4. 修改方法(get或post), 修改entity
+5. abortWith
+
+过滤器主要用于对除了entity外的属性做修改
+拦截器主要对entity做修改
+
+request/response x 服务端/客户端 x 过滤器/拦截器
+
 ```
 public class AuthorizationRequestFilter implements ContainerRequestFilter {
  
@@ -448,8 +555,20 @@ public class GZIPReaderInterceptor implements ReaderInterceptor {
 
 
 @PreMatching
-As written above, pre-matching filters can fully influence the request matching process, which means you can even modify request URI in a pre-matching filter by invoking the setRequestUri(URI) method of ContainerRequestFilter so that a different resource would be matched.
-
+可以在一个请求被绑定到相应的方法之前执行拦截, 这样就可以修改最终执行的方法
+```
+@PreMatching
+public class PreMatchingFilter implements ContainerRequestFilter {
+    public void filter(ContainerRequestContext requestContext)
+                        throws IOException {
+        if (requestContext.getMethod().equals("PUT")) {
+            requestContext.setMethod("POST");
+        }
+    }
+}
+```
+如果没有@PreMatching的话, 那么依旧会调用PUT对应的方法, 即使你已经修改成POST也是无效的
+但是有了这个annotation后就可以做到了
 
 ## 命名绑定 ##
 ```
@@ -596,8 +715,17 @@ Response r = Response.ok().
     build();
 ```
 
+# 14 #
+动态添加资源
+
+
 # 15 SSE支持 #
 Server Send Event
+<dependency>
+    <groupId>org.glassfish.jersey.media</groupId>
+    <artifactId>jersey-media-sse</artifactId>
+</dependency>
+
 ```
 @Path("events")
 public static class SseResource {
@@ -640,6 +768,12 @@ public static class SseResource {
 ```
 # 16 安全 #
 @Context SecurityContext sc;
+
+# 17 WADL #
+https://jersey.java.net/documentation/latest/wadl.html
+
+假设资源的根路径是 /rs, 那么将会产生一个wadl在下面的位置
+http://localhost:8080/rs/application.wadl
 
 # 18 bean验证 #
 ```
@@ -710,6 +844,18 @@ class MyResourceClass {
 
 @Context private UriInfo uriInfo; 可以注入到 ConstraintValidator 里
 
+# 19 实体数据过滤 #
+想要只返回一个实体的某些属性, 而不是全部属性
+可以 减少带宽 安全性问题
+过滤器分3种
+1. 简单的实体属性过滤, 服务端通过annotation的方式指定说哪些属性该被返回
+2. 安全性过滤, 用@RolesAllowed之类的annotation来控制访问权限
+3. 属性选择过滤, 客户端显式说我需要哪些属性, 然后就只返回那些属性
+
+按照官方的意思: 第二个和第三个过滤器会自动启动第一个过滤器, 看一下源代码确实也是如此.
+但是我试了一下, 一旦启动了第三个过滤器, 第一个就不起作用了
+
+
 启动 EntityFilteringFeature
 Filtering based on entity-filtering annotations (or i.e. external configuration file) created using @EntityFiltering meta-annotation.
 
@@ -743,3 +889,33 @@ public class Address {
    "streetAddress" : "1234 Fake St."
 }
 
+# 20. MVC Template #
+不学也行, 反正这个又不是主菜
+
+# 21. 监视和诊断 #
+可以注册 ApplicationEventListener 的一个实现类, 这样可以接受到相应的事件
+
+启动统计功能 rc.property("jersey.config.server.monitoring.statistics.enabled",true);
+
+下面的代码注入统计信息
+```
+@Inject
+Provider<MonitoringStatistics> monitoringStatisticsProvider;
+
+@Path("/tongji")
+@GET
+public Date tongji() {
+	try {
+		MonitoringStatistics m = monitoringStatisticsProvider.get();
+		return m.getRequestStatistics().getLastStartTime();
+	} catch (Exception e) {
+		e.printStackTrace();
+		return null;
+	}
+}
+```
+
+# 24. 和Spring整合 #
+https://jersey.java.net/documentation/latest/spring.html
+
+# 25. 测试 #
