--- a/Java/J2EE/Spring/SpringBoot笔记/笔记.md
+++ b/Java/J2EE/Spring/SpringBoot笔记/笔记.md
@@ -5,11 +5,11 @@
 
 @EnableAutoConfiguration
 
-执行起点:
+运行
 mvn spring-boot:run
 
 
-打成一个jar
+# 打成一个jar #
 <build>
     <plugins>
         <plugin>
@@ -18,6 +18,10 @@ mvn spring-boot:run
         </plugin>
     </plugins>
 </build>
+然后执行 mvn package, java -jar 生成的jar文件 就可以独立运行了!
+仔细查看生成的jar文件的META-INF里的清单文件的MainClass定义
+实际上是这个插件会在生成的jar文件里织入一些逻辑, 使得其他的jar包可以被打包到一起
+
 
 
 <parent>
@@ -27,10 +31,13 @@ mvn spring-boot:run
 </parent>
 这个parent会带来很多的默认配置
 
-你可以通过下面的方式重写依赖的版本
+
+# 你可以通过下面的方式重写依赖的版本 #
 <properties>
     <spring-data-releasetrain.version>Fowler-SR2</spring-data-releasetrain.version>
 </properties>
+可以跟入到 spring-boot-dependencies 的pom文件里去就可以看到很多的版本号配置
+
 
 如果不用parent, 也可以手动导入:
 <dependencyManagement>
@@ -83,12 +90,20 @@ mvn spring-boot:run
 @ComponentScan, @EntityScan
 @SpringBootApplication = configuration + enableauth... + componentscan
 
-@EnableAutoConfiguration 启动Spring的自动配置, Spring会根据你classpath下的jar, 推测你需要的配置!
-@Configuration @Import 
-@Configuration
+@EnableAutoConfiguration 会根据你的jar文件进行一些默认的配置, 比如发现你有jdbc, 就自动帮你配置一个 内嵌的数据源, 这个行为有的时候可能不是我们想要的
+又比如检测到你导入了springmvc的配置, 就自动帮你启动MVC功能了
+可以使用exclude属性或spring.autoconfigure.exclude 来排除
+
+@Configuration 该类是一个配置类
+@Import 导入其他的配置类
+@ImportResource 导入其他的配置文件(applicationContext.xml)
 @EnableAutoConfiguration(exclude={DataSourceAutoConfiguration.class})
 public class MyConfiguration {
 }
+
+依赖注入相关
+@Component @Service @Reposiroty @Controller
+@ComponenetScan @Autowired @Inject @Resource
 
 
 application.properties
@@ -100,8 +115,38 @@ application.properties
 通过Builder模式向用户提供勺子和叉子的套装
 
 
+# 热替换 #
+导入下面的依赖就行了, 其他什么也不用做
+```
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-devtools</artifactId>
+	<optional>true</optional>
+</dependency>
+```
+把它设置成optional就可以防止他被最终打包
+
+
+# 20 属性 #
+在resources目录下放 application.properties, 然后配置一些属性
+
+
 @Value("${name}")
 private String name;
+
+
+## 排除导致reload的资源 ##
+默认情况下 /resources /static /public /templates 等目录下的文件的修改不会触发 reload 操作
+可以通过 spring.devtools.restart.exclude=static/**,public/** 来修改
+或使用 spring.devtools.restart.additional-exclude 来添加额外的不会导致 reload 的资源路径
+
+## 启动参数 ##
+java -jar -Dceshi=a 就可以收到参数
+然后使用
+
+	@Autowired
+	ApplicationArguments args;
+注入就可以得到参数们
 
 @Profile
 spring.profiles.active=dev,hsqldb
@@ -116,6 +161,8 @@ SpringApplicationBuilder
 2. 
 
 # 24. 外部配置 #
+文档这里列出了一堆支持的配置信息的来源
+
 同样支持yaml文件
 application-{profile}.properties
 application.properties
@@ -125,6 +172,11 @@ application.properties
 @Value("${name}")
 private String name;
 ```
+
+@Value 似乎处理不了数组问题, 比如
+nums=1,2,3
+@Value("${nums}")
+List<Integer> nums; 它是处理不了的
 
 java -jar app.jar --name="Spring"
 
@@ -150,8 +202,10 @@ app.description=${app.name} is a Spring Boot application
 似乎yawl里不能放 tab键
 
 可以将一个配置文件直接转换成一个对象
+并且支持数组处理!
+
 ```
-@ConfigurationProperties(prefix="my")
+@ConfigurationProperties(prefix="my") 可以和 BeanValidation 之类的一起使用
 public class Config {
     private List<String> servers = new ArrayList<String>();
     public List<String> getServers() {
@@ -164,11 +218,22 @@ public class Config {
 	@PropertySource("classpath:ps.properties")
 })
 
-@ConfigurationProperties(prefix = "foo")还可以放在某个方法上, 这样会对放回的值进行注值
-
 对注入的值可以使用 @NotNull @NotEmpty 等annotation 进行验证
 
+## 第三方配置 ##
+```
+@ConfigurationProperties(prefix = "foo")
+@Bean
+public FooComponent fooComponent() {
+    ...
+}
+```
+
 # 25. Profiles #
+属性 spring.profiles.active=dev,hsqldb
+启动参数 --spring.profiles.active=dev,hsqldb
+
+
 指定全局的profiles
 ```
 ConfigurableApplicationContext ctx = new SpringApplicationBuilder( AppMain.class )
@@ -179,6 +244,8 @@ ConfigurableApplicationContext ctx = new SpringApplicationBuilder( AppMain.class
 
 @Profile("production")
 可以放在某个的单独的类上, 这样这个类就会使用它指定的profile 而不是全局的profile
+spring.profiles: prod
+spring.profiles.include: proddb,prodmq
 
 # 26. Logging #
 默认使用 commons-logging
@@ -188,6 +255,14 @@ ConfigurableApplicationContext ctx = new SpringApplicationBuilder( AppMain.class
 配置日志的格式 和 颜色(如果支持的话)
 
 使用其他的日志库
+
+使用 logging.file 或 logging.path 可以控制日志输出到文件
+
+控制日志级别
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
 
 # 27. WEB #
 1. 依赖 spring-boot-starter-web 模块
