--- a/Linux/CentOS/网络操作/常见网络操作.md
+++ b/Linux/CentOS/网络操作/常见网络操作.md
@@ -26,3 +26,13 @@ IPADDR=192.168.60.251 IP地址
 /etc/hosts
 
 ss 命令 取代 netstat
+
+# netstat #
+-n 显示数字, 不解析名字
+-a 显示所有连接中的socket
+-c 持续列出网络状态
+-t 显示tcp端口的情况
+-u 显示udp端口的情况
+-p 显示相关进程号
+
+s
