ehcache querydsl quartz

--- a/Java/Lib/Ehcache/笔记.md
+++ b/Java/Lib/Ehcache/笔记.md
@@ -2,29 +2,29 @@ Ehcache笔记
 官方文档 http://www.ehcache.org/generated/2.10.0/html/ehc-all/index.html
 http://www.xuebuyuan.com/70540.html
 
-# Topology Types #
-standalone
-	单个
-distributed
-	分布式
-	数据放在一个或多个远程服务器上
-	而每个应用节点上只保存最近使用过的数据
-replicated
-	重复
-	
 # Storage Tiers #
 MemoryStore
 	内存级别 在JVM控制之下
 	对象不必是Serializable 最快 线程安全
+	如果缓存对象太多, 会给gc带来压力
 OffHeapStore
 	OffHeapStore is only available with the Terracotta BigMemory products.
 	操作系统的内存级别 不在JVM控制之下 要求系统内存大
 DiskStore
 	硬盘存储,只能用于standalone模式
 	要求Serializable,使用ObjectInput/OutputStream进行读写操作
-当最底层的缓存溢出的时候,会尽量向上跑
+	只能用于standalone模式
+	The DiskStore tier is available only for local (standalone) instances of cache.
+	When you use a distributed cache (available only in BigMemory Max), a
+	Terracotta Server Array is used instead of a disk tier.
+	注意对象要支持序列化接口
+
+如果MS放满了
+如果overflow=true, 那么溢出到DS
+如果overflow=false, 那么删除一些元素
 
 
+# 基本术语 #
 CacheManager
 	有名字
 	单例(用静态方法,有默认的名字) 或 多个实例
@@ -32,7 +32,9 @@ CacheManager
 				.create( TestEHCache.class.getClassLoader().getResourceAsStream( "ehcache.xml" ) );
 	shutdown
 	管理了一堆Cache,增改查
+	
 Cache
+	可以简单理解为一个Map
 	线程安全
 	增删改查 缓存的元素个数
 	cacheWriter
@@ -44,10 +46,31 @@ Element
 	此外Element上还放了很多统计信息, 版本,命中次数,最长存活时间,最长空闲时间,上次更新时间,
 
 
-System of Record / SOR
-	
-	
+Cache hit 缓存命中
+Cache miss
 
+System of Record / SOR
+基本上指的就是一个普通的数据库
+
+
+Locality of Reference
+局部性
+
+The Long Tail
+长尾效应
+Chris Anderson, of Wired Magazine, coined the term “the long tail” to refer to cases in
+e-commerce systems where a small number of items can make up the bulk of sales (or
+a small number of blogs can get the most hits) and there is a long “tail” of less popular
+items.
+
+# Topology Types #
+1. standalone 每个应用程序节点都有自己独立的缓存, 互不相关
+2. distributed 缓存的数据是放在远程服务器上的, 每个应用服务器节点上可以保存一小部分的最近使用的缓存
+3. replicated 每个应用程序节点都有相同的缓存, 多个节点之间要保证最终一致性
+
+当有多个节点的时候, 可能出现的一些问题
+1. 缓存不一致, 数据不一致
+2. 分布式和副本集模式都有可能导致更多的网络开销
 
 # 使用的模式 #
 ## cache-aside ##
