--- a/Java/J2EE/Spring/SpringBoot笔记/笔记.md
+++ b/Java/J2EE/Spring/SpringBoot笔记/笔记.md
@@ -274,3 +274,85 @@ logging.level.org.hibernate=ERROR
 可以自己在写一个类, 带有@Configuration  @EnableWebMvc, 这样就可以完全配置你的mvc了
 
 不习惯这样的开发方式怎么办!
+
+
+# 29 数据库 #
+添加依赖
+```
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+```
+它会自动引入一些东西, 包括 tomcat-jdbc
+
+在 application.properties 里配置:
+```
+driverClassName=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/d1
+username=root
+password=123456
+```
+更多的配置可以去看 DataSourceProperties 这个类
+
+并且会自动注册一个 JdbcTemplate  和 NamedParameterJdbcTemplate
+
+
+
+# 参数配置 #
+@ConfigurationProperties(prefix = "db", locations = "file:db.properties")
+@Bean
+public DataSource dataSource() {
+	org.apache.tomcat.jdbc.pool.DataSource ds = new org.apache.tomcat.jdbc.pool.DataSource();
+	return ds;
+}
+
+通过 PropertySource 添加的属性的优先级比较低
+Properties added in this way have lower priority than any added using the default locations (e.g. application.properties), system properties, environment variables or the command line.
+
+@PropertySource < application.properties < 系统属性 < 命令行参数
+
+1. 通过命令行指定 --author=xx
+2. 指定系统属性 -Dauthor=x
+3. application.properties 里 author=xzc
+4. 通过 PropertySource 引入一个 author=xzchaoo
+
+最高的是 xx, 然后是x, 然后是xzc, 最后是xzchaoo
+
+按照上面的方法, 如果你要指定 server.port 的话, 你需要
+--server.port=8080 这样显得有点麻烦, 特别是当你的key比较长的时候
+可以在配置文件里这样
+server.port=${port:8080}
+然后通过命令行参数 --port=9090
+
+支持yaml文件
+
+
+设置激活的profiles
+通过 spring.profiles.active 属性
+因此你可以在上面提到的4个地方设置这个属性
+
+比如通过命令行
+java -jar -Dspring.profiles.active=production demo-0.0.1-SNAPSHOT.jar
+
+不同profile下的配置
+application-${profile}.properties
+
+
+如果想在打包之后, 让用户修改一些配置参数怎么办?
+按照上面的说法, 就是要通过命令行或系统属性, 如果属性比较多的话, 你可能要考虑写一个启动脚本来处理会比较好
+
+其实也可以使用 @PropertySource, 它可以接受 file:abc.properties 而这个文件是相对于 java -jar ... 的当前路径的
+但是要注意 @PropertySource 的优先级比较低, 因此他用到的属性必须不能出现在比它高级的 属性里, 否则它肯定被覆盖
+
+
+```
+//后面的属性文件会覆盖前面的属性
+@PropertySources({
+	@PropertySource(value = {"classpath:xzc.properties"}, ignoreResourceNotFound = false),
+	@PropertySource(value = {"file:app.properties"}, ignoreResourceNotFound = true)
+})
+```
+第一个 classpath:xzc.properties 提供了默认配置
+第二个 file:app.properties 提供了用户覆盖配置的机会, 只要在它的当前运行目录下有 app.properties 就可以进行覆盖
+
