修改一些目录结构 添加 Jasypt HikariCP等

--- a/Java/J2EE/Hibernate/Validator/笔记.md
+++ b/Java/J2EE/Hibernate/Validator/笔记.md
@@ -123,15 +123,15 @@ public class CarTest {
 @Valid
 private List<Person> passengers = new ArrayList<Person>();
 
+有些约束还可以放在类级别上
+约束可以被子类继承
+
+	
 一些标准可用的约束:
 http://docs.jboss.org/hibernate/validator/5.2/reference/en-US/html/ch02.html
 
 一些hibernate自定义的约束
 http://docs.jboss.org/hibernate/validator/5.2/reference/en-US/html/ch02.html
-可以验证邮箱
-url
-SafeHtml
-range, 字符串长度范围
 
 可以对函数的输入参数和返回值做验证
 
@@ -185,6 +185,15 @@ ConvertGroup 用于 指定@Valid验证所需要的组, 默认是 默认组
 private Driver driver;
 	
 
+# Validator #
+可以对一个对象进行验证
+可以对一个对象的属性进行验证
+	1. 你可以提供一个对象, 然后只验证某个属性
+	2. 你可以提供一个类名, 然后提供属性的名字 和 值 进行验证
+
+验证的结果是 ConstraintViolation 的集合
+通过 ConstraintViolation 可以知道是哪个bean的哪个属性违反了约束, 和消息模板
+
 # 自定义约束 #
 
 # 复合约束 #
@@ -208,4 +217,306 @@ public @interface ValidLicensePlate {
 	Class<? extends Payload>[] payload() default { };
 }
 ```
+
+在调用前验证参数
+还有一种跨参数的验证器, 普通的验证器只能单独验证某个值, 如果有的情况需要同时考虑两个值的话就需要跨参数验证器了
+比如要求参数提供的 min < max
+
+在调用后验证返回值
+
+可以重用验证逻辑
+
+
+子类的参数约束不可以比父类强
+子类的返回值约束不可以比父类弱
+
+# 验证方法 #
+ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
+executableValidator = factory.getValidator().forExecutables();
+拿到 executableValidator 之后就可以用它来验证一个方法了
+```
+Car object = new Car( "Morris" );
+Method method = Car.class.getMethod( "drive", int.class );
+Object[] parameterValues = { 80 };
+Set<ConstraintViolation<Car>> violations = executableValidator.validateParameters(
+		object,
+		method,
+		parameterValues
+);
+
+assertEquals( 1, violations.size() );
+Class<? extends Annotation> constraintType = violations.iterator()
+		.next()
+		.getConstraintDescriptor()
+		.getAnnotation()
+		.annotationType();
+assertEquals( Max.class, constraintType );
+```
+
+# 配置错误信息 #
+每个annotation上都有一个
+String message() default "{javax.validation.constraints.NotNull.message}";
+它其实是指定了一个key
+用{}括起来的是参数, 用${}括起来的是表达式(通过它可以引用到Size#min()的min,  ${min} )
+如果要显示这些符号的话就需要转义了.
+
+ValidationMessages_en_US.properties 文件
+
+
+# 验证组 #
+用于解决在某些情况下值会某些属性进行验证, 否则一旦你写了验证, 那么每次都要对这个属性进行验证
+这样你在验证的时候, 需要显示指定要验证哪些组
+没有指定组的约束都在默认组里
+
+可以用一个组来复合其他组
+@GroupSequence({ Default.class, CarChecks.class, DriverChecks.class }) 指定验证顺序
+public interface OrderedChecks {
+}
+如果一个约束出现在多个组里, 那么也只会被验证一次
+
+@GroupSequence 也可以用来加在实体类上, 用于修改默认的Default组
+
+@GroupSequenceProvider 也可以用来提供一个类的默认验证组
+
+@ConvertGroup(from = Default.class, to = DriverChecks.class) which ensures the Default group gets converted to the DriverChecks group during cascaded validation of the driver association.
+
+@Valid
+@ConvertGroup(from = Default.class, to = DriverChecks.class)
+private Driver driver;
+
+# 自定义约束 #
+
+## 简单约束 ##
+可以自己模拟 MinValidatorForNumber 写一个
+
+ConstraintValidator 似乎是一个单例
+然后每次需要验证的时候, 都是先调用initialize, 再调用isValid, 似乎是这样!
+```
+@Target(ElementType.FIELD)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Constraint(validatedBy = MyMinMaxValidator.class)
+public @interface MyMinMax {
+
+	String message() default "{org.xzc.learn.validator.annotation.MyMinMax.message}";
+
+	Class<?>[] groups() default {};
+
+	Class<? extends Payload>[] payload() default {};
+
+	String value() default "";
+
+	@Target({ElementType.FIELD})
+	@Retention(RetentionPolicy.RUNTIME)
+	@Documented
+	@interface List {
+		MyMinMax[] value();
+	}
+}
+
+
+...
+	@MyMinMax
+	private String username;
+	
+public class MyMinMaxValidator implements ConstraintValidator<MyMinMax, Object> {
+	@Autowired
+	ApplicationContext ac;
+
+	public MyMinMaxValidator() {
+		System.out.println("CSH");
+	}
+
+	@Override
+	public void initialize(MyMinMax constraintAnnotation) {
+		//在这里可以拿到annotation上的一些配置
+	}
+
+	@Override
+	public boolean isValid(Object value, ConstraintValidatorContext ctx) {
+		System.out.println(ac);
+		//在这里验证是否合法
+		return false;
+	}
+}
+
+```
+## 类级别的约束 ##
+需要将annotation的 Target 修改成 @Target({ TYPE, ANNOTATION_TYPE })
+
+## 跨参数约束 ##
+annotation需要放在方法上
+
+
+@Constraint(validatedBy = ConsistentDateParameterValidator.class)
+@Target({ METHOD, CONSTRUCTOR, ANNOTATION_TYPE })
+@Retention(RUNTIME)
+@Documented
+public @interface ConsistentDateParameters {
+
+	String message() default "{org.hibernate.validator.referenceguide.chapter06." +
+			"crossparameter.ConsistentDateParameters.message}";
+
+	Class<?>[] groups() default { };
+
+	Class<? extends Payload>[] payload() default { };
+}
+
+//跨参数
+@SupportedValidationTarget(ValidationTarget.PARAMETERS)
+public class ConsistentDateParameterValidator implements
+		ConstraintValidator<ConsistentDateParameters, Object[]> {
+
+	@Override
+	public void initialize(ConsistentDateParameters constraintAnnotation) {
+	}
+
+	@Override
+	public boolean isValid(Object[] value, ConstraintValidatorContext context) {
+		if ( value.length != 2 ) {
+			throw new IllegalArgumentException( "Illegal method signature" );
+		}
+
+		//leave null-checking to @NotNull on individual parameters
+		if ( value[0] == null || value[1] == null ) {
+			return true;
+		}
+
+		if ( !( value[0] instanceof Date ) || !( value[1] instanceof Date ) ) {
+			throw new IllegalArgumentException(
+					"Illegal method signature, expected two " +
+							"parameters of type Date."
+			);
+		}
+
+		return ( (Date) value[0] ).before( (Date) value[1] );
+	}
+}
+
+在annotation的定义里加一个, 可以用于控制这个annotation用于哪里
+ConstraintTarget validationAppliesTo() default ConstraintTarget.IMPLICIT; 它的意思是自动推断, 比如当没有参数的时候, 那么用于返回值
+没有返回值的时候就用于参数
+
+因为用于 跨参数 和 返回值 的annotation 放的位置是一样的, 因此有可能造成矛盾
+@ScriptAssert(script = "arg1.size() <= arg0", validationAppliesTo = ConstraintTarget.PARAMETERS)
+public Car buildCar(int seatCount, List<Passenger> passengers) {...}
+
+## 复合约束 ##
+```
+@NotNull
+@Size(min = 2, max = 14)
+@CheckCase(CaseMode.UPPER)
+@Target({ METHOD, FIELD, ANNOTATION_TYPE })
+@Retention(RUNTIME)
+@Constraint(validatedBy = { }) 这步似乎是不能少的
+@Documented
+public @interface ValidLicensePlate {
+
+	String message() default "{org.hibernate.validator.referenceguide.chapter06." +
+			"constraintcomposition.ValidLicensePlate.message}";
+
+	Class<?>[] groups() default { };
+
+	Class<? extends Payload>[] payload() default { };
+}
+```
+
+下面这个例子可能更好一些
+```
+@Min(value = 0)
+@NotNull
+@Target({ METHOD, FIELD, ANNOTATION_TYPE, CONSTRUCTOR, PARAMETER })
+@Retention(RUNTIME)
+@Documented
+@Constraint(validatedBy = {})
+@SupportedValidationTarget(ValidationTarget.ANNOTATED_ELEMENT)
+@ReportAsSingleViolation
+public @interface ValidInvoiceAmount {
+
+	String message() default "{org.hibernate.validator.referenceguide.chapter11.purelycomposed."
+			+ "ValidInvoiceAmount.message}";
+
+	Class<?>[] groups() default {};
+
+	Class<? extends Payload>[] payload() default {};
+
+	@OverridesAttribute(constraint = Min.class, name = "value")
+	long value();
+}
+```
+默认复合的约束都是 and 关系, 可以用 @ConstraintComposition(OR) 改成 or 关系
+
+
+可以引用的变量
+
+
+${validatedValue} 进行验证的值, 就是 public boolean isValid(Object[] value, ConstraintValidatorContext ctx) 的value对象
+
+{value} 可以引用你的 annotation 上的参数
+
+${formatter.format('%1$.2f', validatedValue)}
+
+{}的解析优先于${}
+
+# 配置 #
+可以配置成 failFast( true )
+addProperty( "hibernate.validator.fail_fast", "true" )
+
+# ORM整合 #
+Hibernate会将元数据上的约束 用于生成表时候的语句
+比如 NotNull 之类的约束
+
+可以将 hibernate.validator.apply_to_ddl to false 关掉(这个属性应该是在构建Validator的时候使用addProperty方法添加的)
+
+Hibernate 或 JPA 规范都有 相关的监听器
+
+
+
+
+
+
+
+Pattern
+正则表达式
+
+常见约束
+Min/Max
+用于判断数值的范围
+
+NotNull/Null
+
+Size
+字符串或集合的大小约束
+
+Range
+
+Future / Past
+用于判断一个时间是否是当前时间之后或之前
+
+AssertTrue/AssertFalse
+用于布尔值
+
+DecimalMax/DecimalMin (value=,inclusive=)
+用于各种数值类型
+
+@Valid 可以用于验证一个子属性
+
+约束通常加在字段上
+也可以加在get方法上
+
+Hibernate
+Email
+Length
+@NotEmpty
+@NotBlank
+
+Range
+数值的范围
+
+SafeHtml
+用于检查字符串里是否包含了形如 <script/> 的片段
+
+URL
+是否是一个满足特定条件(比如主机名)的url
+
 
