--- a/Java/J2EE/Spring/官方文档笔记/10.AOP新.md
+++ b/Java/J2EE/Spring/官方文档笔记/10.AOP新.md
@@ -1,19 +1,27 @@
+# 简介 #
+新的 AOP 使用 AspectJ 语法, 配置起来更方便
+
 # 几个概念 #
+
 ## Aspect ##
-一个横切的的模块
+一个横切的逻辑
+@Aspect
 
 ## JoinPoint ##
 连接点, 可以织入逻辑的点
 
 ## Advice ##
 通知/增强
-before
-afterReturning
-afterThrowing
-after
-around
+
+### before @Before ###
+## afterReturning @AfterReturning ##
+## afterThrowing @AfterThrowing ##
+## after(finally) @After ##
+## around(拦截器) @Around ##
+
 
 ## Poincut ##
+在新版里就是使用 AspectJ 的表达式
 用于匹配切入点的过滤器
 @Pointcut("execution(public void org.xzc.learn.spring.aop.Singer.sing())")
 private void sing() {
@@ -26,15 +34,20 @@ execution(方法签名) 匹配方法签名
 execution(modifiers-pattern? ret-type-pattern declaring-type-pattern?name-pattern(param-pattern)
             throws-pattern?)
 
-within(类名) 只有当调用的时候是在该类上才会触发
+within(类名)
 this
-target(类名) 当target是目标类的时候才会触发
+target(类名) 当target是目标类或实现该接口的时候才会触发
 args(参数名列表) 匹配参数名列表
-@target 跟上面的类似, 就是换成annotation版本
-@args
-@within
-@annotation
+
+@target 如果target的类上有该annotation
+@args 如果参数列表有该annotation
+@within 如果target的类上有该annotation
+@annotation 如果方法上有该annotation
 bean(bean名)
+
+不知道@within和@target的区别
+
+args的参数是动态指定的
 
 支持 && || ! 括号
 
@@ -45,19 +58,35 @@ execution(* com.xyz.service..*.*(..))
 target(com.xyz.service.AccountService)
 @target(org.springframework.transaction.annotation.Transactional)
 
+@Before("com.xyz.myapp.SystemArchitecture.dataAccessOperation() && args(account,..)")
+public void validateAccount(Account account) {
+// ...
+}
+
+@Pointcut("com.xyz.myapp.SystemArchitecture.dataAccessOperation() && args(account,..)")
+private void accountDataAccessOperation(Account account) {}
+@Before("accountDataAccessOperation(account)")
+public void validateAccount(Account account) {
+// ...
+}
+
 
 execution上的函数参数是静态判断的
 而args里的参数是动态判断的
 
-用 .. 或 * 可以匹配多个函数参数
+.. 表示匹配多个参数
+* 表示匹配一个参数
+(*,String)
 
 ## Introduction ##
+对一个 target 引入其他接口
 
 ## target ##
+被增强的对象
 
 ## AOP Proxy ##
-
-## Weaving ##
+增强 target 之后暴露的对象
+比如 JDK 代理对象 或 CGLIB 的代理对象
 
 # 使用方法 #
 1. 加入jar包 rt 和 weaver
@@ -87,3 +116,9 @@ public static Worker workerMixin;
 
 # AOP代理 #
 AopContext.currentProxy()
+((Pojo) AopContext.currentProxy()).bar();
+factory.setExposeProxy(true);
+
+# Advisor #
+
+# JDK和CGLIB代理的区别 #
