--- a/Java/J2EE/Spring/官方文档笔记/11.AOP旧.md
+++ b/Java/J2EE/Spring/官方文档笔记/11.AOP旧.md
@@ -36,3 +36,13 @@ JdkRegexpMethodPointcut
 StaticMethodMatcherPointcut 
 
 通知
+
+
+
+Advice
+
+Advisor 用于结合一个 Pointcut 和 Advice
+
+ProxyFactoryBean 用于将一个 target object 和 一堆的 advisor 结合起来
+
+
