--- a/Java/Lib/Querydsl/笔记.md
+++ b/Java/Lib/Querydsl/笔记.md
@@ -1,5 +1,9 @@
+http://www.querydsl.com/static/querydsl/4.1.1/reference/html_single/
+https://github.com/querydsl/querydsl/blob/master/querydsl-jpa/src/test/java/com/querydsl/jpa/AbstractJPATest.java
+
 构建静态类型的 类似SQL 的查询
 像这样你就可以不用拼凑字符串了
+通常使用 Querydsl 生成响应的 JPQL 语句, 然后再由相应的实现者(比如Hibernate) 将 JPQL 翻译成 原生SQL 语句.
 
 支持 JPA JDBC HibernateSearch MongoDB 等
 
@@ -20,10 +24,12 @@ Expressions
 JPAExpressions
 BooleanBuilder 
 
+动态配置
 Path<Person> person = Expressions.path(Person.class, "person");
 Path<String> personFirstName = Expressions.path(String.class, person, "firstName");
 Constant<String> constant = Expressions.constant("P");
 Expressions.predicate(Ops.STARTS_WITH, personFirstName, constant);
+
 
 PathBuilder<User> entityPath = new
 PathBuilder<User>(User.class, "entity");
@@ -34,6 +40,8 @@ entityPath.get("userName", String.class);
 // .. and correct signature
 entityPath.getString("userName").lower();
 
+# Case #
+```
 Expression<String> cases = new CaseBuilder()
     .when(customer.annualSpending.gt(10000)).then("Premier")
     .when(customer.annualSpending.gt(5000)).then("Gold")
@@ -46,9 +54,200 @@ Expression<String> cases = customer.annualSpending
     .when(5000).then("Gold")
     .when(2000).then("Silver")
     .otherwise("Bronze")
+```
 
-Tuple
 
+# Tuple #
+```
+List<Tuple> result = query.select(employee.firstName, employee.lastName)
+                          .from(employee).fetch();
+for (Tuple row : result) {
+     System.out.println("firstName " + row.get(employee.firstName));
+     System.out.println("lastName " + row.get(employee.lastName));
+}}
+```
+
+# Bean #
+```
 List<UserDTO> dtos = query.select(
     Projections.bean(UserDTO.class, user.firstName, user.lastName)).fetch();
+```
 
+# transform #
+```
+Aggregating parent child relations
+
+import static com.querydsl.core.group.GroupBy.*;
+
+Map<Integer, List<Comment>> results = query.from(post, comment)
+    .where(comment.post.id.eq(post.id))
+    .transform(groupBy(post.id).as(list(comment)));
+This will return a map of post ids to related comments.
+
+Multiple result columns
+
+Map<Integer, Group> results = query.from(post, comment)
+    .where(comment.post.id.eq(post.id))
+    .transform(groupBy(post.id).as(post.name, set(comment.id)));
+```
+
+
+# JPAQueryFactory #
+动作的发起者
+select update delete
+
+发起这些动作之后会返回一个 JPAQuery
+
+# JPAQuery #
+select ... from ... join ... where ... group by ... having ... order by ...
+
+JPAExpressions 里面有聚合函数
+
+
+# 与 Spring Data 整合 #
+由于我们采用DAO模式, 因此实际上大多数情况下并不会使用 Querydsl 去做查询
+而是使用 Querydsl 的 Predicate
+
+# DslExpression #
+所有DSL表达式的基类
+支持 as 操作
+
+# SimpleExpression extends DslExpression #
+所有标量的基类
+支持的操作
+count countDistinct isNull isNotNull
+eq eqAll eaAny in
+ne neAll neAny notIn
+nullif when
+
+# ComparableExpressionBase extends SimpleExpression #
+所有可以比较的表达式
+asc desc
+coalesce
+
+# ComparableExpression extends ComparableExpressionBase #
+between notBetween
+gt goe lt loe
+
+# LiteralExpression extends ComparableExpressionBase #
+字面值常量
+
+# BooleanExpression extends LiteralExpression #
+and or isTrue isFalse not eq orAllOf andAnyOf
+# EnumExpression extends LiteralExpression#
+
+# StringExpression extends LiteralExpression#
+append prepend charAt concat contains indexOf substring endsWith startsWith equals notEquals locate 
+isEmpty length max min   
+like notLike matches(正则表达式)
+trim upper lower
+ 
+
+# TemporalExpression extends LiteralExpression#
+before after
+
+# DateExpression extends TemporalExpression #
+可以获得日期的各个字段
+min max
+
+# TimeExpression extends TemporalExpression #
+可以获得时间的各个字段
+当前时间
+
+# DateTimeExpression extends TemporalExpression #
+具有前面两者的功能
+
+
+
+# NumberExpression extends ComparableExpressionBase #
+所有数值的基类
+
+
+abs sum min max floor ceil round avg sqrt random
+add subtract mod divide multiply negate -> Number
+goe gt loe lt ...
+between notBetween
+like
+
+# NumberPath extends NumberExpression #
+数值类 在父类的基础上混入了 Path 信息
+
+# BeanPath extends SimpleExpression #
+# EntityPathBase extends BeanPath #
+它是所有自动代码生成的类的基类
+
+# CollectionExpressionBase extends DslExpression #
+empty size contains
+getElementType
+
+# CollectionPathBase extends CollectionExpressionBase #
+这个类主要是提供了路径信息
+any
+
+# SetPath extends CollectionPathBase #
+# ListPath extends CollectionPathBase #
+get(index)
+
+# MapExpressionBase extends DslExpression #
+size empty contains containsKey containsValue get
+
+# ArrayPath extends SimpleExpression #
+componentType
+get size
+
+# 几个情况 #
+1. 当你需要类似: select ... from User as u1, User as u2 ...
+	1. 这样同时引用了两次User类, 但是要区别他们, 因为你有 as u1 和 as u2
+	2. 此时就需要 QUser u1 = new QUser("u1");QUser u2 = new QUser("u2");
+	3. 然后 ...from(u1,u2).where(u1....u2...) 否则就无法实现这种效果
+2. 对于List类型的属性, 可以使用 any(), 然后它会返回一个元素类型的Q对象
+	1. 它的意思就是表示存在任意一个...满足条件...
+	2. 似乎没有all操作符, 如果有需要的话, 可能是要 "换位思考"
+
+# Expressions #
+可以用于构建复杂的 when case
+常数表达式
+
+# JPAExpressions #
+用于创建一些 detached 表达式
+
+# 杂 #
+CaseBuilder
+Projections
+
+# 例子 #
+找出所有 关联学生的状态都为0 的考试
+```
+f.from(k)
+.where(
+	k.students.size().castToNum(Long.class).eq(
+		f.select(s.count()).from(s.student).where(s.in(k.students).and(s.status.eq(1)))
+	)
+)
+.select(k).fetch();
+```
+或
+```
+f.from(k)
+.leftJoin(k.students, s)
+.where(
+	s.status.eq(0)
+).groupBy(k)
+.having(s.count().castToNum(Integer.class).eq(k.students.size()))
+.select(k).fetch();
+```
+
+主要是 Querydsl 似乎没有足够的能力能够表达 "all", 当然SQL本身也并不具备这能力
+需要转一下弯:
+考试的学生 的数量 = 考试的学生中status=0 的数量
+
+# 子查询 #
+只需要使用多个 EntityPathBase 就行了, 注意要保证他们的名字不同
+因此经常出现
+```
+QEmployee employee = QEmployee.employee;
+QEmployee employee2 = new QEmployee("e2");
+```
+这样的语句
+
+DateExpression DateTimeExpression 
